[package]
name = "fluent-datetime"
version = "0.1.1"
edition = "2021"
description = "Integrate ICU international date formatting with Fluent translations"
license = "ISC"
repository = "https://github.com/g2p/fluent-datetime"

[dependencies]
fluent-bundle = "0.16"
icu_calendar = "2"
icu_datetime = "2"
icu_locale_core = "2"
icu_time = "2"
intl-memoizer = "0.5.3"
unic-langid = "0.9"

[dev-dependencies]
fluent = "0.17"

